Bug 693719: Android: Catch exceptions when counting pages.

Return 0. Check for this case when opening a PDF and give a nice dialogue.

Fix the nice dialogue code so that it doesn't crash afterwards due to
a null mSearchTask.